--- a/SAMPLE/.settings/org.talend.repository.prefs
+++ b/SAMPLE/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=branches/master
 repository.project.id=enc\:migration.token.encryption.key\:Yy2EO7/dMC899Q4JhG1lsQbJylI9+N3vBLk9cDWhbVvc/y0vuWVMFFQ\=
